--- a/api/config.json
+++ b/api/config.json
@@ -1,4 +1,6 @@
 {
     "token": "6388439810:AAHkxPHSA4o0iahsv6VK6PdGJLsRUllC2M4",
-    "bot_developer": "5051394886"
+    "bot_developer": 5051394886,
+    "bot_dev_username": "@KazuoYuuka",
+    "bot_channel_log": "-1001816883555"
 }
